--- a/index.html
+++ b/index.html
@@ -3,57 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuaU Obfuscator</title>
+    <title>Advanced LuaU Obfuscator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            background-color: #1e1e2f;
+            color: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
-            background-color: #f4f4f4;
+            height: 100vh;
         }
         textarea {
-            width: 90%;
-            max-width: 800px;
-            height: 200px;
-            margin-bottom: 10px;
+            width: 80%;
+            height: 150px;
+            margin: 10px 0;
+            background-color: #2e2e3e;
+            color: #ffffff;
+            border: none;
             padding: 10px;
-            font-size: 14px;
+            font-size: 16px;
         }
         button {
             padding: 10px 20px;
-            font-size: 16px;
-            background-color: #007bff;
+            background-color: #0078d7;
             color: white;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
         }
         button:hover {
-            background-color: #0056b3;
-        }
-        .output {
-            width: 90%;
-            max-width: 800px;
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            white-space: pre-wrap;
-            overflow-wrap: break-word;
+            background-color: #005a9e;
         }
     </style>
 </head>
 <body>
-    <h1>LuaU Obfuscator</h1>
-    <textarea id="inputCode" placeholder="Enter your LuaU script here..."></textarea>
-    <button onclick="obfuscate()">Obfuscate</button>
-    <h3>Obfuscated Code:</h3>
-    <div class="output" id="outputCode"></div>
-
-    <script src="obfuscator.js"></script>
+    <h1>Advanced LuaU Obfuscator</h1>
+    <textarea id="inputCode" placeholder="Enter your LuaU code here"></textarea>
+    <input type="text" id="garbageVariable" placeholder="Garbage variable name" style="margin: 10px; padding: 10px;">
+    <button id="obfuscateButton">Obfuscate</button>
+    <textarea id="outputCode" readonly placeholder="Your obfuscated code will appear here"></textarea>
+    <script src="app.js"></script>
 </body>
 </html>
